# docmind

./: .dockerignore  .env.example  .gitignore  2206.01062v1.md  Dockerfile  README.md  api.py  app.py  docker-compose.yml  pyproject.toml  test_agent.py  test_ingestion.py  test_output.txt  test_retrieval.py  test_search.py  visualise_graph.py
notes/: day1_notes.txt  day2_notes.txt  day3_notes.txt  day5_notes.txt
src/docmind/agents/: rag_agent.py
src/docmind/config/: settings.py
src/docmind/ingestion/: chunker.py  models.py  parser.py
src/docmind/retrieval/: embeddings.py  vector_store.py
src/docmind/utils/: logger.py
